force-app/main/default/objects/NPN_Tableau_UserMgmt__c/NPN_Tableau_UserMgmt__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>NPN Tableau UserMgmt</label>
</CustomObject>