force-app/main/default/objects/NPN_Tableau_UserMgmt__c/fields/Contact_Permission__c.field-meta.xml
<CustomField>
    <fullName>Contact_Permission__c</fullName>
    <label>Contact Permission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>