force-app/main/default/objects/NPN_Tableau_UserMgmt__c/fields/SiteRole__c.field-meta.xml
<CustomField>
    <fullName>SiteRole__c</fullName>
    <label>SiteRole</label>
    <length>255</length>
    <type>Text</type>
</CustomField>