force-app/main/default/objects/NPN_Tableau_UserMgmt__c/fields/Userlicense__c.field-meta.xml
<CustomField>
    <fullName>Userlicense__c</fullName>
    <label>Userlicense</label>
    <length>255</length>
    <type>Text</type>
</CustomField>